# sdcppmu-parallel-algo

./: CMakeLists.txt  README.md  accumulate.cpp  accumulate2.cpp  countif.cpp  dirsize.cpp  parexception.cpp  parforeach.cpp  parforeachloop.cpp  parreduce.cpp  parreduce2.cpp  parreducefloat.cpp  parsort.cpp  partransformreduce.cpp  timer.hpp
